# libbayer

./: .travis.yml  Cargo.toml  LICENCE-MIT.txt  README.md  rustfmt.toml
benches/: benches.rs
examples/: showbayer.rs  writebayer.rs
include/: libbayer.h
src/: bayer.rs  border_mirror.rs  border_none.rs  border_replicate.rs  errcode.rs  ffi.rs  lib.rs  raster.rs
src/demosaic/: cubic.rs  linear.rs  mod.rs  nearestneighbour.rs  none.rs
