[package]
name = "bayer"
version = "0.2.0"
edition = "2021"
authors = ["David Wang <millimillenary@gmail.com>"]
homepage = "https://github.com/wangds/libbayer.git"
repository = "https://github.com/wangds/libbayer.git"
documentation = "https://docs.rs/bayer/"
description = "Algorithms for demosaicing Bayer images."
license = "MIT"
readme = "README.md"
keywords = ["bayer", "cfa", "demosaic"]
categories = ["multimedia::images"]

[lib]
name = "bayer"
crate-type = ["rlib", "dylib"]
test = true
doctest = true
doc = true

[features]
default = ["rayon"]
bench = []

[dependencies]
byteorder = "1.4.3"
libc = "0.2.138"
rayon = { version = "1.6.1", optional = true }
quick-error = "2"

[dev-dependencies]
flic = "0.1.6"
sdl2 = { version = "0.35.2", features = ["image"] }

[badges]
travis-ci = { repository = "virtualritz/libbayer" }
